--- a/app/src/main/res/layout/add_property_fragment.xml
+++ b/app/src/main/res/layout/add_property_fragment.xml
@@ -32,157 +32,187 @@
                     android:layout_marginStart="@dimen/marginStart"
                     android:text="@string/property_type"
                     app:layout_constraintBaseline_toBaselineOf="@id/type_input_layout"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/textViewPrice"
+                    android:id="@+id/textViewAddress"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/marginStart"
-                    android:text="Address"
+                    android:text="@string/address"
                     app:layout_constraintBaseline_toBaselineOf="@id/address_text_input"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/textViewType" />
 
-            <androidx.constraintlayout.widget.Barrier
-                android:id="@+id/barrier"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:barrierDirection="start"
-                app:constraint_referenced_ids="type_input_layout,price_text_input" />
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/type_input_layout"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marginStart"
-                android:layout_marginTop="@dimen/marginTop"
-                android:layout_marginEnd="@dimen/marginEnd"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/barrier"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_goneMarginEnd="@dimen/marginEnd">
-
-                <AutoCompleteTextView
-                    android:id="@+id/type_dropdown"
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/textViewDescription"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:labelFor="@id/type_input_layout"
-                    android:text="@string/select_a_property_type" />
+                    android:layout_marginStart="@dimen/marginStart"
+                    android:text="@string/description"
+                    app:layout_constraintBaseline_toBaselineOf="@id/description_text_input"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/textViewType" />
 
-            </com.google.android.material.textfield.TextInputLayout>
+                <androidx.constraintlayout.widget.Barrier
+                    android:id="@+id/barrier"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:barrierDirection="start"
+                    app:constraint_referenced_ids="type_input_layout,address_text_input, description_text_input" />
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/type_input_layout"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
+                    android:layout_width="280dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/marginStart"
+                    android:layout_marginTop="@dimen/marginTop"
+                    android:layout_marginEnd="@dimen/marginEnd"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/barrier"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_goneMarginEnd="@dimen/marginEnd">
+
+                    <AutoCompleteTextView
+                        android:id="@+id/type_dropdown"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textAutoComplete"
+                        android:labelFor="@id/type_input_layout"
+                        android:text="@string/select_a_property_type" />
+
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/address_text_input"
-                    android:layout_width="300dp"
+                    android:layout_width="280dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/marginStart"
                     android:layout_marginTop="@dimen/marginTop"
                     android:hint="@string/address"
                     android:textSize="@dimen/textSize"
                     app:endIconMode="clear_text"
+                    android:inputType="textPostalAddress"
                     app:layout_constraintStart_toEndOf="@id/barrier"
-                    app:layout_constraintTop_toBottomOf="@id/type_input_layout"
-                    app:layout_goneMarginEnd="@dimen/marginEnd" />
+                    app:layout_constraintTop_toBottomOf="@id/type_input_layout" />
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/address2_text_input"
-                    android:layout_width="300dp"
+                    android:layout_width="280dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/marginStart"
                     android:layout_marginTop="@dimen/marginTop"
                     android:hint="@string/address2"
                     android:textSize="@dimen/textSize"
                     app:endIconMode="clear_text"
+                    android:inputType="textPostalAddress"
                     app:layout_constraintStart_toEndOf="@id/barrier"
-                    app:layout_constraintTop_toBottomOf="@id/address_text_input"
-                    app:layout_goneMarginEnd="@dimen/marginEnd" />
+                    app:layout_constraintTop_toBottomOf="@id/address_text_input" />
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/price_text_input"
-                    android:layout_width="300dp"
+                    android:id="@+id/city_text_input"
+                    android:layout_width="280dp"
                     android:layout_height="wrap_content"
-                    android:hint="City
-"
                     android:layout_marginStart="@dimen/marginStart"
                     android:layout_marginTop="@dimen/marginTop"
-                    app:endIconMode="clear_text"
+                    android:hint="@string/city"
                     android:textSize="@dimen/textSize"
+                    android:inputType="text"
+                    app:endIconMode="clear_text"
                     app:layout_constraintStart_toEndOf="@id/barrier"
-                    app:layout_constraintTop_toBottomOf="@id/address2_text_input"
-                    app:layout_goneMarginEnd="@dimen/marginEnd" />
+                    app:layout_constraintTop_toBottomOf="@id/address2_text_input" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/surface_input_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marginStart"
-                android:layout_marginTop="@dimen/marginTop"
-                android:layout_marginEnd="@dimen/marginEnd"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/price_text_input"
-                app:layout_goneMarginEnd="@dimen/marginEnd">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/state_text_input"
+                    android:layout_width="110dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/marginStart"
+                    android:layout_marginTop="@dimen/marginTop"
+                    android:hint="@string/state"
+                    android:inputType="textPostalAddress"
+                    android:textSize="@dimen/textSize"
+                    app:endIconMode="clear_text"
+                    app:layout_constraintStart_toEndOf="@id/barrier"
+                    app:layout_constraintTop_toBottomOf="@id/city_text_input" />
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/country_text_input"
+                    android:layout_width="280dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/marginStart"
+                    android:layout_marginTop="@dimen/marginTop"
+                    android:hint="@string/country"
+                    android:text="@string/united_state"
+                    android:textSize="@dimen/textSize"
+                    app:endIconMode="clear_text"
+                    app:layout_constraintStart_toEndOf="@id/barrier"
+                    app:layout_constraintTop_toBottomOf="@id/state_text_input" />
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/description_text_input"
+                    android:layout_width="280dp"
+                    android:layout_height="435dp"
+                    android:layout_marginStart="@dimen/marginStart"
+                    android:layout_marginTop="@dimen/marginTop"
+                    android:hint="@string/description"
+                    android:maxLength="512"
+                    android:textSize="@dimen/textSize"
+                    app:endIconMode="clear_text"
+                    app:layout_constraintStart_toEndOf="@id/barrier"
+                    app:layout_constraintTop_toBottomOf="@id/country_text_input" />
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/zipcode_text_input"
+                    android:layout_width="110dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/marginStart"
+                    android:layout_marginTop="@dimen/marginTop"
+                    android:hint="@string/zipcode"
+                    android:inputType="number"
+                    android:textSize="@dimen/textSize"
+                    app:endIconMode="clear_text"
+                    app:layout_constraintStart_toEndOf="@id/state_text_input"
+                    app:layout_constraintTop_toBottomOf="@id/city_text_input" />
+
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/surface_text_input"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:endIconMode="clear_text"
-
                     android:layout_marginStart="@dimen/marginStart"
                     android:layout_marginTop="@dimen/marginTop"
                     android:hint="@string/price"
                     android:textSize="@dimen/textSize"
-                    app:layout_goneMarginEnd="@dimen/marginEnd" />
-            </com.google.android.material.textfield.TextInputLayout>
+                    app:endIconMode="clear_text"
+                    app:layout_constraintStart_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="parent" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/number_of_room_input_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:endIconMode="clear_text"
-                android:layout_marginStart="@dimen/marginStart"
-                android:layout_marginTop="@dimen/marginTop"
-                android:layout_marginEnd="@dimen/marginEnd"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/surface_input_layout"
-                app:layout_goneMarginEnd="@dimen/marginEnd">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/number_of_room_text_input"
-                    app:endIconMode="clear_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/marginStart"
                     android:layout_marginTop="@dimen/marginTop"
                     android:hint="@string/price"
                     android:textSize="@dimen/textSize"
-                    app:layout_goneMarginEnd="@dimen/marginEnd" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/number_of_bathroom_input_layout"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/marginStart"
-                android:layout_marginTop="@dimen/marginTop"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/number_of_room_input_layout"
-                app:layout_goneMarginEnd="@dimen/marginEnd">
+                    app:endIconMode="clear_text"
+                    app:layout_constraintStart_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="parent" />
 
                 <NumberPicker
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/marginStart"
                     android:layout_marginTop="@dimen/marginTop"
-                    android:layout_marginEnd="@dimen/marginEnd"
-                    app:layout_goneMarginEnd="@dimen/marginEnd" />
-            </com.google.android.material.textfield.TextInputLayout>
+                    app:layout_constraintStart_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
+
         <com.google.android.material.bottomappbar.BottomAppBar
             android:id="@+id/bottomAppBar"
             style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
